# avl-tree

./: AVL.h  CMakeLists.txt  LicensePlate.h  README.md  SLList.h  app.h  input.txt  main.cpp
output/: in_order.txt  post_order.txt  pre_order.txt  tree.txt
resources/: config.txt  input.txt
result/: tree.txt
src/: config.cpp  menu.cpp  path.cpp
src/include/: app.h  avl_tree.h  config.h  license_plate.h  menu.h  path.h  sllist.h
